wrapped up all of the edit / add bug features

--- a/public/css/app.styl
+++ b/public/css/app.styl
@@ -114,6 +114,19 @@ table.grid
 			text-align right
 			
 .edit
+	position relative
+	.update
+		position absolute
+		top -30px
+		left 50%
+		margin-left -70px
+		width 140px
+		text-align center
+		font-family 'Quicksand', sans-serif
+		font-weight 300
+		font-size 24px
+		color #99CC14
+		display none
 	.back
 		color #CCC
 		margin-bottom 10px
